--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ]
   },
   "scripts": {
-    "build": "yarn build:tokens && nx run-many --target=build:production --projects=@elvia/elvis,@elvia/elvis-components,elvia-designsystem,react-ssr --parallel=1",
+    "build": "yarn && yarn build:tokens && nx run-many --target=build:production --projects=@elvia/elvis,@elvia/elvis-components,elvia-designsystem,react-ssr --parallel=1",
     "build:web": "nx build elvia-designsystem",
     "build:components": "nx build @elvia/elvis-components",
     "build:elvis": "nx build @elvia/elvis",
