--- a/packages/components/components/elvis-timepicker/package.json
+++ b/packages/components/components/elvis-timepicker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-timepicker",
-  "version": "0.0.1-alpha",
+  "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "author": "",
