--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     ]
   },
   "scripts": {
-    "build": "yarn build:tokens && nx run-many --target=build:production --projects=@elvia/elvis,@elvia/elvis-components --parallel=1 && yarn build:web:prod && yarn build:react:prod",
-    "build:web:prod": "nx build:production elvia-designsystem --skip-nx-cache",
+    "build": "yarn build:tokens && yarn build:elvis:prod && yarn build:components:prod && yarn build:web:prod && yarn build:react:prod",
+    "build:elvis:prod": "nx build:production @elvia/elvis",
+    "build:components:prod": "nx build:production @elvia/elvis-components --skip-nx-cache",
+    "build:web:prod": "nx build:production elvia-designsystem",
     "build:react:prod": "nx build:production react-ssr",
     "build:web": "nx build elvia-designsystem",
     "build:components": "nx build @elvia/elvis-components",
