--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:production": "yarn contentful:production && ng build --configuration production",
+    "build:production": "ng build --configuration production",
     "contentful": "cd contentful && node syncFromContentful.js",
     "contentful:production": "cd contentful && NODE_ENV=production node syncFromContentful.js",
     "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts",
