--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -9,11 +9,10 @@
     ]
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "build:production": "yarn build && mv ./build ../../../web/dist/elvia-designsystem/react-preview",
-    "eject": "react-scripts eject",
-    "ssr": "yarn build && node server/index.js"
+    "start": "react-scripts start",
+    "start:ssr": "yarn build && node server/index.js"
   },
   "dependencies": {
     "@babel/core": "^7.18.10",
