--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "build:production": "ng build --configuration production",
+    "start": "ng serve",
     "contentful": "cd contentful && node syncFromContentful.js",
     "contentful:production": "cd contentful && NODE_ENV=production node syncFromContentful.js",
-    "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts",
-    "e2e": "ng e2e"
+    "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts"
   },
   "dependencies": {
     "@angular/animations": "^14.2.0",
