--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     ]
   },
   "scripts": {
-    "build": "yarn build:components:prod && yarn build:web:prod",
+    "build": "yarn build:tokens && yarn build:elvis:prod && yarn build:components:prod && yarn build:web:prod",
+    "build:elvis:prod": "nx build:production @elvia/elvis",
     "build:components:prod": "nx build:production @elvia/elvis-components --skip-nx-cache",
     "build:web:prod": "yarn contentful:production && nx run-many --target=build --projects=elvia-designsystem,react-ssr --parallel=1",
     "build:web": "nx build elvia-designsystem",
