--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "scripts": {
     "build": "yarn build:tokens && yarn build:elvis:prod && yarn build:components:prod && yarn build:web:prod",
     "build:elvis": "nx build @elvia/elvis",
-    "build:components": "nx build @elvia/elvis-components",
-    "build:web": "nx build elvia-designsystem",
-    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons",
     "build:elvis:prod": "nx build:production @elvia/elvis",
+    "build:components": "nx build @elvia/elvis-components",
     "build:components:prod": "nx build:production @elvia/elvis-components --skip-nx-cache",
     "build:web:prod": "yarn contentful:production && nx run-many --target=build --projects=elvia-designsystem,react-ssr --parallel=1",
+    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons",
     "start:elvis": "nx start @elvia/elvis",
     "start:components": "nx start @elvia/elvis-components",
     "start:web": "yarn contentful && nx start elvia-designsystem",
@@ -26,9 +25,9 @@
     "contentful": "nx contentful elvia-designsystem",
     "contentful:production": "nx contentful:production elvia-designsystem --skip-nx-cache",
     "prettier:elvis": "prettier --write \"packages/elvis/**/*.js\"",
+    "prettier:components": "nx prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
     "prettier:web": "prettier --write \"packages/web/src/**/*.ts\"",
-    "prettier:components": "prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
-    "eslint": "./node_modules/.bin/eslint --fix \"./**/*.{js,ts,tsx}\"",
+    "lint": "./node_modules/.bin/eslint --fix \"./**/*.{js,ts,tsx}\"",
     "lint:all": "yarn prettier:elvis && yarn prettier:web && yarn prettier:components && yarn eslint",
     "test": "nx test @elvia/elvis-components",
     "test:start": "nx test:start @elvia/elvis-components",
@@ -49,11 +48,11 @@
     ],
     "packages/web/**/*.+(js|ts|tsx)": [
       "yarn prettier:web",
-      "yarn eslint"
+      "yarn lint"
     ],
     "packages/components/components/**/*.+(js|ts|tsx)": [
       "yarn prettier:components",
-      "yarn eslint"
+      "yarn lint"
     ]
   },
   "engines": {
@@ -64,7 +63,7 @@
   },
   "devDependencies": {
     "@date-io/core": "^1.3.6",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^14.6.2",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
@@ -75,7 +74,7 @@
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
-    "nx": "14.5.10",
+    "nx": "^14.6.5",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0",
