--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -48,12 +48,12 @@
     "@elvia/elvis-timepicker": "portal:../components/components/elvis-timepicker",
     "@elvia/elvis-toolbox": "portal:../components/components/elvis-toolbox",
     "@elvia/elvis-typography": "portal:../elvis-typography",
-    "@types/lodash.debounce": "^4.0.6",
     "classlist.js": "^1.1.20150312",
     "contentful": "^8.5.8",
     "dotenv": "^10.0.0",
     "fuse.js": "^6.6.2",
     "glob": "^7.1.6",
+    "lodash.debounce": "^4.0.8",
     "natural-compare-lite": "^1.4.0",
     "ng-dynamic-component": "^10.0.0",
     "ngx-markdown": "^14.0.1",
