--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -6,9 +6,9 @@
   "author": "",
   "main": "./dist/index.js",
   "dependencies": {
-    "lodash.throttle": "^4.1.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash.throttle": "^4.1.7"
+    "@types/lodash": "^4.14.179"
   }
 }
