--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@elvia/elvis-toolbox",
-  "version": "2.2.1",
+  "version": "2.2.0",
   "description": "",
   "license": "MIT",
   "author": "",
   "main": "./dist/index.js",
   "dependencies": {
-    "lodash.throttle": "^4.1.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash.throttle": "^4.1.7"
+    "@types/lodash": "^4.14.179"
   }
 }
