--- a/packages/elvis-assets-icons/package.json
+++ b/packages/elvis-assets-icons/package.json
@@ -6,9 +6,8 @@
   "author": "",
   "main": "icons.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp",
-    "watch": "gulp watch"
+    "start": "gulp watch",
+    "build": "gulp"
   },
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.1"
