--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -7,8 +7,7 @@
   "main": "dist/elviaColors.js",
   "style": "dist/elviaColors.scss",
   "scripts": {
-    "build": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp"
   },
   "dependencies": {
     "lodash.kebabcase": "^4.1.1"
