--- a/packages/components/components/elvis-chip/package.json
+++ b/packages/components/components/elvis-chip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-chip",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -8,7 +8,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "@react-aria/interactions": "^3.8.4",
     "classnames": "^2.3.1",
