--- a/packages/components/components/elvis-dropdown/package.json
+++ b/packages/components/components/elvis-dropdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-dropdown",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "description": "",
   "main": "web_component.js",
   "author": "",
@@ -8,7 +8,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.1",
     "@elvia/elvis-component-wrapper": "^2.3.3",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "@elvia/elvis-typography": "^2.2.0",
     "lodash.isequal": "^4.5.0",
