--- a/packages/components/components/elvis-popover/package.json
+++ b/packages/components/components/elvis-popover/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@elvia/elvis-popover",
-  "version": "5.1.4",
+  "version": "5.1.5",
   "description": "",
   "license": "MIT",
   "author": "",
   "main": "web_component.js",
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.4.2",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "classnames": "^2.3.1"
   }
