--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tabs",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -8,7 +8,7 @@
   "types": "elvia-tabs.d.ts",
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.2.2",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "classnames": "^2.3.1"
   }
