--- a/packages/components/components/elvis-icon/package.json
+++ b/packages/components/components/elvis-icon/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@elvia/elvis-icon",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "",
   "license": "MIT",
   "author": "",
   "main": "web_component.js",
   "dependencies": {
-    "@elvia/elvis-assets-icons": "^2.4.2",
+    "@elvia/elvis-assets-icons": "^2.6.0",
+    "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^2.2.2"
   }
 }
