--- a/packages/components/components/elvis-tooltip/package.json
+++ b/packages/components/components/elvis-tooltip/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@elvia/elvis-timepicker",
-  "version": "1.0.2",
+  "name": "@elvia/elvis-tooltip",
+  "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "author": "",
