--- a/packages/components/components/elvis-card/package.json
+++ b/packages/components/components/elvis-card/package.json
@@ -9,7 +9,8 @@
     "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.3.1",
-    "@elvia/elvis-toolbox": "^2.2.0",
+    "@elvia/elvis-toolbox": "^3.0.0",
+    "@elvia/elvis-tooltip": "^1.0.0",
     "@elvia/elvis-typography": "^2.1.0",
     "styled-components": "^5.3.3"
   },
