--- a/packages/components/components/elvis-popover/package.json
+++ b/packages/components/components/elvis-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-popover",
-  "version": "5.1.5",
+  "version": "5.1.6",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -9,6 +9,10 @@
     "@elvia/elvis-component-wrapper": "^2.4.2",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "lodash.throttle": "^4.1.1"
+  },
+  "devDependencies": {
+    "@types/lodash.throttle": "^4.1.7"
   }
 }
