--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tabs",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -10,6 +10,10 @@
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "lodash.throttle": "^4.1.1"
+  },
+  "devDependencies": {
+    "@types/lodash.throttle": "^4.1.7"
   }
 }
