--- a/packages/components/components/elvis-slider/package.json
+++ b/packages/components/components/elvis-slider/package.json
@@ -6,8 +6,9 @@
   "author": "",
   "main": "web_component.js",
   "dependencies": {
-    "@elvia/elvis-colors": "^1.2.0",
+    "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^2.2.2",
+    "@elvia/elvis-icon": "^1.3.1",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
