--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -30,6 +30,7 @@
     "@elvia/elvis-datepicker-range": "*",
     "@elvia/elvis-divider": "*",
     "@elvia/elvis-dropdown": "*",
+    "@elvia/elvis-header": "*",
     "@elvia/elvis-icon": "*",
     "@elvia/elvis-modal": "*",
     "@elvia/elvis-pagination": "*",
