--- a/packages/components/components/elvis-header/package.json
+++ b/packages/components/components/elvis-header/package.json
@@ -10,7 +10,13 @@
     "@elvia/elvis-component-wrapper": "^2.4.3",
     "@elvia/elvis-icon": "^1.3.2",
     "@elvia/elvis-toolbox": "^3.1.0",
+    "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": ">= 16.8.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
