--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,8 @@
     "@babel/register": "^7.18.9",
     "@elvia/elvis-component-wrapper": "*",
     "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/user-event": "14.0.0",
     "@types/jest": "^26.0.23",
     "@types/styled-components": "^5.1.19",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
@@ -60,6 +62,7 @@
     "react": "^17.0.0-0",
     "react-dom": "^17.0.0-0",
     "react-is": ">= 16.8.0",
+    "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
     "styled-components": ">= 2",
     "ts-loader": "^8.0.3",
