try to remove --skip-nx-cache to see if it still works

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:components:prod": "nx build:production @elvia/elvis-components --skip-nx-cache",
     "build:web": "nx build elvia-designsystem",
     "build:web:prod": "yarn contentful:production && nx run-many --target=build:production --projects=elvia-designsystem,react-test --parallel=1 --skip-nx-cache",
-    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons --skip-nx-cache",
+    "build:tokens": "nx run-many --target=build --projects=@elvia/elvis-colors,@elvia/elvis-typography,@elvia/elvis-assets-icons",
     "start:elvis": "nx start @elvia/elvis",
     "start:components": "nx start @elvia/elvis-components",
     "start:web": "yarn contentful && nx start elvia-designsystem",
