--- a/packages/components/components/elvis-tooltip/package.json
+++ b/packages/components/components/elvis-tooltip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tooltip",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -10,6 +10,7 @@
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^4.0.0",
+    "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
