fix(toolbox): missing dependency to tslib

--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -4,5 +4,8 @@
   "description": "",
   "license": "MIT",
   "author": "",
-  "main": "./dist/index.js"
+  "main": "./dist/index.js",
+  "dependencies": {
+    "tslib": "^2.4.0"
+  }
 }
