--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,7 +19,7 @@
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "ajv": "^8.8.2",
-    "babel-plugin-styled-components": "^1.13.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jsdom-global": "^3.0.2",
     "sass": "^1.33.0",
@@ -54,6 +54,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-tap": "^2.0.0",
     "jest": "^27.0.1",
     "jsdom": "^16.6.0",
@@ -64,7 +65,7 @@
     "react-is": ">= 16.8.0",
     "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
-    "styled-components": ">= 2",
+    "styled-components": "^5.3.3",
     "ts-loader": "^8.0.3",
     "typescript-plugin-styled-components": "^2.0.0",
     "webpack": "^4.44.2",
