--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,7 +8,8 @@
     "start": "ng serve",
     "contentful": "cd contentful && node syncFromContentful.js",
     "contentful:production": "cd contentful && NODE_ENV=production node syncFromContentful.js",
-    "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts"
+    "contentful:types": "cd contentful && contentful-typescript-codegen --output types.d.ts",
+    "lint": "ng lint"
   },
   "dependencies": {
     "@angular/animations": "^14.2.0",
@@ -69,24 +70,27 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
+    "@angular-eslint/builder": "14.1.2",
+    "@angular-eslint/eslint-plugin": "14.1.2",
+    "@angular-eslint/eslint-plugin-template": "14.1.2",
+    "@angular-eslint/schematics": "14.1.2",
+    "@angular-eslint/template-parser": "14.1.2",
     "@angular/cli": "^14.1.3",
     "@angular/compiler-cli": "^14.2.0",
     "@angular/language-service": "^14.1.3",
     "@types/lodash.debounce": "^4.0.6",
     "@types/natural-compare-lite": "^1.4.0",
     "@types/node": "12.20.40",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@typescript-eslint/eslint-plugin": "5.37.0",
+    "@typescript-eslint/parser": "5.37.0",
     "babel-eslint": "^10.1.0",
-    "codelyzer": "^6.0.2",
     "contentful-management": "^7.51.1",
     "contentful-typescript-codegen": "^3.2.3",
-    "eslint": "^7.1.0",
+    "eslint": "^8.23.1",
     "lint-staged": "^10.2.7",
     "object-path": ">=0.11.5",
     "stylelint": "^10.0.1 || ^11.0.0 || ^12.0.0 || ^13.0.0",
     "ts-node": "8.10.2",
-    "tslint": "~6.1.0",
     "typescript": "^4.8.2",
     "webpack": "^5.12.0",
     "webpack-subresource-integrity": ">=1.5.1"
