--- a/packages/components/components/elvis-breadcrumb/package.json
+++ b/packages/components/components/elvis-breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-breadcrumb",
-  "version": "2.1.3",
+  "version": "2.1.4-beta.0",
   "description": "",
   "license": "MIT",
   "author": "",
