--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -40,6 +40,7 @@
     "@types/styled-components": "^5.1.19",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-jest": "^27.0.1",
+    "babel-preset-minify": "^0.5.2",
     "chai": "^4.3.4",
     "concurrently": "^5.3.0",
     "css-loader": "^4.3.0",
