feat(datepicker): start rewrite of datepicker

--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -2,9 +2,7 @@
   "$schema": "../../node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "packageManager": "yarn",
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ]
+    "schematicCollections": ["@angular-eslint/schematics"]
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -56,7 +54,6 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/@elvia/elvis-datepicker/dist/react/js/style.css",
               "./node_modules/@elvia/elvis-tabs/dist/react/js/style.css",
               "./node_modules/@elvia/elvis-popover/dist/react/js/style.css"
             ],
@@ -126,24 +123,15 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
             "scripts": []
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         },
         "e2e": {
