--- a/packages/components/components/elvis-datepicker/package.json
+++ b/packages/components/components/elvis-datepicker/package.json
@@ -1,29 +1,22 @@
 {
   "name": "@elvia/elvis-datepicker",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "",
-  "main": "web_component.js",
-  "author": "",
   "license": "MIT",
+  "author": "",
+  "main": "web_component.js",
   "dependencies": {
-    "@date-io/core": "^1.3.6",
-    "@date-io/date-fns": "^1.3.13",
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^2.3.3",
-    "@elvia/elvis-icon": "^1.3.1",
+    "@elvia/elvis-component-wrapper": "^2.2.2",
+    "@elvia/elvis-icon": "^1.3.2",
     "@elvia/elvis-toolbox": "^4.0.0",
-    "@material-ui/core": "4.12.3",
-    "@material-ui/pickers": "3.3.10",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.27.0",
-    "lodash.isequal": "^4.5.0"
-  },
-  "devDependencies": {
-    "@types/lodash.isequal": "^4.5.5"
+    "@elvia/elvis-typography": "^2.3.1",
+    "date-fns": "^2.29.3",
+    "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": "^16.8.0 || ^17.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-is": ">=16.8.0"
   }
 }
