--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^10.0.0",
     "fuse.js": "^6.6.2",
     "glob": "^7.1.6",
+    "lodash-es": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "natural-compare-lite": "^1.4.0",
     "ngx-markdown": "^14.0.1",
@@ -79,6 +80,7 @@
     "@angular/cli": "^14.1.3",
     "@angular/compiler-cli": "^14.2.5",
     "@angular/language-service": "^14.2.5",
+    "@types/lodash-es": "^4",
     "@types/lodash.debounce": "^4.0.6",
     "@types/natural-compare-lite": "^1.4.0",
     "@types/node": "12.20.40",
