remove propTypes from config, fix setProps event trigger

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -37,7 +37,17 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "14.4.3",
+    "@types/gulp": "^4.0.9",
+    "@types/gulp-babel": "^6.1.30",
+    "@types/gulp-cached": "^0.0.32",
+    "@types/gulp-filter": "^3.0.34",
+    "@types/gulp-header": "^2.0.1",
+    "@types/gulp-rename": "^2.0.1",
+    "@types/gulp-sass": "^5.0.0",
+    "@types/gulp-sourcemaps": "^0.0.35",
+    "@types/gulp-tap": "^1.0.1",
     "@types/jest": "^26.0.23",
+    "@types/merge-stream": "^1.1.2",
     "@types/styled-components": "^5.1.19",
     "babel-jest": "^27.0.1",
     "babel-preset-minify": "^0.5.2",
