--- a/packages/components/components/elvis-popover/package.json
+++ b/packages/components/components/elvis-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-popover",
-  "version": "5.2.0",
+  "version": "5.1.11",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -10,6 +10,7 @@
     "@elvia/elvis-component-wrapper": "^2.4.2",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^5.0.0",
+    "@elvia/elvis-typography": "^3.0.0",
     "classnames": "^2.3.1",
     "lodash.throttle": "^4.1.1",
     "styled-components": "^5.3.3"
