--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -33,6 +33,9 @@
               "@elvia/elvis-typography",
               "hoist-non-react-statics",
               "json5",
+              "lodash.debounce",
+              "lodash.isequal",
+              "lodash.throttle",
               "natural-compare-lite",
               "prismjs"
             ],
