--- a/packages/components/components/elvis-divider/package.json
+++ b/packages/components/components/elvis-divider/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.2",
+    "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
