--- a/packages/web/angular.json
+++ b/packages/web/angular.json
@@ -63,7 +63,7 @@
                 "output": "./assets/contentful/dist/"
               }
             ],
-            "styles": ["src/styles.scss", "./node_modules/@elvia/elvis-datepicker/dist/react/js/style.css"],
+            "styles": ["src/styles.scss"],
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
