feat(toolbox): add shared interface for base component props

--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "main": "./dist/index.js",
   "dependencies": {
+    "@elvia/elvis-component-wrapper": "*",
     "tslib": "^2.4.0"
   }
 }
