--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -6,6 +6,9 @@
   "author": "",
   "main": "./dist/index.js",
   "dependencies": {
+    "@elvia/elvis-colors": "^1.4.2",
+    "@elvia/elvis-typography": "^2.3.1",
+    "styled-components": "^5.3.6",
     "tslib": "^2.4.0"
   }
 }
