--- a/packages/components/components/elvis-datepicker-range/package.json
+++ b/packages/components/components/elvis-datepicker-range/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-datepicker-range",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "web_component.js",
   "author": "",
@@ -8,6 +8,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.3.3",
     "@elvia/elvis-datepicker": "^6.0.0",
+    "@elvia/elvis-toolbox": "^5.5.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
