--- a/packages/components/components/elvis-segmented-control/package.json
+++ b/packages/components/components/elvis-segmented-control/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-segmented-control",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -9,8 +9,13 @@
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "^1.3.1",
+    "@elvia/elvis-toolbox": "^5.5.0",
     "@elvia/elvis-typography": "^2.3.1",
+    "lodash.uniqueid": "^4.0.1",
     "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/lodash.uniqueid": "^4.0.7"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
