--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   },
   "devDependencies": {
     "@date-io/core": "^1.3.6",
-    "@nrwl/nx-cloud": "^14.6.2",
+    "@nrwl/nx-cloud": "15.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
@@ -75,7 +75,7 @@
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
-    "nx": "^14.6.5",
+    "nx": "15.0.4",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "react-is": ">= 16.8.0",
