Lego 2024: Add useSlot hook to toolbox (#1091)
* add useSlot hook to toolbox

* fix toolbox peerdependencies

--- a/packages/components/components/elvis-toolbox/package.json
+++ b/packages/components/components/elvis-toolbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-toolbox",
-  "version": "5.6.1",
+  "version": "5.7.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -11,5 +11,10 @@
     "@elvia/elvis-typography": "^2.3.1",
     "styled-components": "^5.3.6",
     "tslib": "^2.4.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": ">= 16.8.0"
   }
 }
