--- a/packages/components/components/elvis-box/package.json
+++ b/packages/components/components/elvis-box/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-box",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "",
   "main": "web_component.js",
   "author": "",
@@ -8,6 +8,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.2",
+    "@elvia/elvis-toolbox": "^5.7.1",
     "@elvia/elvis-typography": "^2.1.0",
     "styled-components": "^5.3.3"
   },
