--- a/packages/components/components/elvis-dropdown/package.json
+++ b/packages/components/components/elvis-dropdown/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@elvia/elvis-dropdown",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "description": "",
   "main": "web_component.js",
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.1",
-    "@elvia/elvis-component-wrapper": "^2.3.3",
+    "@elvia/elvis-component-wrapper": "^3.0.0",
     "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^5.0.0",
     "@elvia/elvis-tooltip": "^1.0.8",
@@ -19,10 +19,7 @@
   },
   "devDependencies": {
     "@types/lodash.isequal": "^4.5.5",
-    "@types/lodash.uniqueid": "^4.0.1",
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "react-is": ">= 16.8.0"
+    "@types/lodash.uniqueid": "^4.0.1"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
