--- a/packages/components/components/elvis-modal/package.json
+++ b/packages/components/components/elvis-modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-modal",
-  "version": "2.1.12",
+  "version": "2.1.13-beta.1",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -9,7 +9,7 @@
     "@elvia/elvis-colors": "^1.4.1",
     "@elvia/elvis-component-wrapper": "^3.0.0",
     "@elvia/elvis-icon": "^1.3.0",
-    "@elvia/elvis-toolbox": "^5.0.0",
+    "@elvia/elvis-toolbox": "^5.7.1",
     "@elvia/elvis-typography": "^2.1.0",
     "styled-components": "^5.3.3"
   },
