--- a/packages/components/components/elvis-popover/package.json
+++ b/packages/components/components/elvis-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-popover",
-  "version": "5.1.12",
+  "version": "6.0.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -9,12 +9,13 @@
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^3.0.0",
     "@elvia/elvis-icon": "^1.3.1",
-    "@elvia/elvis-toolbox": "^5.0.0",
+    "@elvia/elvis-toolbox": "^5.8.0",
     "classnames": "^2.3.1",
-    "lodash.throttle": "^4.1.1",
     "styled-components": "^5.3.3"
   },
-  "devDependencies": {
-    "@types/lodash.throttle": "^4.1.7"
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-is": ">=16.8.0"
   }
 }
