--- a/.github/workflows/publishToNpm.yml
+++ b/.github/workflows/publishToNpm.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Get Yarn Cache
         uses: actions/setup-node@v3
         with:
+          registry-url: 'https://registry.npmjs.org'
           cache: 'yarn'
       - name: Install
         run: yarn install --immutable
@@ -26,4 +27,4 @@ jobs:
         continue-on-error: true
         run: yarn publish:all
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
