--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -11,3 +11,4 @@ plugins:
     spec: '@yarnpkg/plugin-interactive-tools'
 
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
+npmAuthToken: ${NODE_AUTH_TOKEN-''}
