cleanup colors package.json

--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.2",
   "description": "Elvia colors",
   "license": "MIT",
-  "author": "Trigger",
+  "author": "",
   "main": "dist/elviaColors.js",
   "style": "dist/elviaColors.scss",
   "scripts": {
