add files option to all published package.json files

--- a/packages/components/components/elvis-component-wrapper/package.json
+++ b/packages/components/components/elvis-component-wrapper/package.json
@@ -6,6 +6,11 @@
   "author": "",
   "main": "./dist/elvia-component.js",
   "types": "./dist/elvia-component.d.ts",
+  "files": [
+    "CHANGELOG.json",
+    "README.md",
+    "dist/**/*"
+  ],
   "dependencies": {
     "json5": "^2.2.1",
     "lodash.isequal": "^4.5.0",
