--- a/packages/elvis-typography/package.json
+++ b/packages/elvis-typography/package.json
@@ -9,6 +9,11 @@
   "scripts": {
     "build": "gulp"
   },
+  "files": [
+    "CHANGELOG.json",
+    "README.md",
+    "dist/**/*"
+  ],
   "devDependencies": {
     "del": "^6.0.0",
     "gulp": "^4.0.2",
