--- a/packages/components/components/elvis-badge/package.json
+++ b/packages/components/components/elvis-badge/package.json
@@ -5,9 +5,14 @@
   "license": "MIT",
   "author": "",
   "main": "web_component.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "files": [
+    "web_component.js",
+    "react.js",
+    "react.d.ts",
+    "CHANGELOG.json",
+    "README.md",
+    "dist/**/*"
+  ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
     "@elvia/elvis-component-wrapper": "^3.0.0",
