--- a/packages/components/components/elvis-icon/package.json
+++ b/packages/components/components/elvis-icon/package.json
@@ -5,8 +5,21 @@
   "license": "MIT",
   "author": "",
   "main": "web_component.js",
+  "files": [
+    "web_component.js",
+    "react.js",
+    "react.d.ts",
+    "CHANGELOG.json",
+    "README.md",
+    "dist/**/*"
+  ],
   "dependencies": {
     "@elvia/elvis-assets-icons": "^2.6.0",
     "@elvia/elvis-component-wrapper": "^3.0.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": ">= 16.8.0"
   }
 }
