--- a/packages/components/components/elvis-spotlight/package.json
+++ b/packages/components/components/elvis-spotlight/package.json
@@ -5,6 +5,14 @@
   "main": "web_component.js",
   "author": "",
   "license": "MIT",
+  "files": [
+    "web_component.js",
+    "react.js",
+    "react.d.ts",
+    "CHANGELOG.json",
+    "README.md",
+    "dist/**/*"
+  ],
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^3.0.0",
     "styled-components": "^5.3.3"
