--- a/packages/elvis-assets-trademark/package.json
+++ b/packages/elvis-assets-trademark/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.2",
   "description": "Trademarked logos etc, for use in Elvia applications only.",
   "main": "index.js",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist/**/*"
+  ],
   "author": "",
   "license": "SEE LICENSE IN LICENSE file"
 }
